Minor Style Fix
Fixed Error div on serial Dilution page and remove unneccessary line
breaks on single solution page.

--- a/serial-dilution/serialStyle.css
+++ b/serial-dilution/serialStyle.css
@@ -129,7 +129,7 @@ h3 {
 
 #myAlert{
     display: none;
-    margin-top: 25px;
+    margin-top: 15px;
     margin-bottom: 5px;
     border: 1px solid white;
 }
