--- a/shared-content/InputStyle.css
+++ b/shared-content/InputStyle.css
@@ -75,7 +75,7 @@ html,body{
 	-ms-transform: translateY(-50%);
 	transform: translateY(-40%);
 	font-size: 18px;
-	margin-top: 4em;
+	margin-top: 2em;
 	padding-bottom:0px;
 	margin-bottom: -2em;
 	
